Fixed faq letter-spacing
A more correct solution is to fix this up the chain in sandstone where dt elements are 32px with -1px letter-spacing. But I don't want to change that now because we'd have to fix any other pages already using that styling.

Note to self: fix dts in sandstone.

--- a/media/css/foundation/annual2011.less
+++ b/media/css/foundation/annual2011.less
@@ -33,6 +33,7 @@ dl.faq dt {
   color: @mozred;
   .open-sans;
   font-weight: bold;
+  letter-spacing: normal;
   margin: 1em 0 .25em;
 }
 
